Optimized Code and Enhanced UI